# todoist-toolkit

./: README.md  __init__.py  pyproject.toml  todoist_cli.py
todoist_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
