[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todoist-toolkit"
version = "0.1.1"
description = "Command-line toolkit for Todoist task management"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Luke Steuber", email = "luke@lukesteuber.com"},
]
keywords = [
    "todoist",
    "task-management",
    "cli",
    "productivity",
    "todo"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "todoist-api-python>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/lukeslp/todoist-toolkit"
Repository = "https://github.com/lukeslp/todoist-toolkit.git"
Issues = "https://github.com/lukeslp/todoist-toolkit/issues"

[project.scripts]
todoist = "todoist_cli:main"
todoist-toolkit = "todoist_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
